Fix Firefox issue with cutting off the url box

--- a/app/assets/stylesheets/print.css.scss
+++ b/app/assets/stylesheets/print.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .span2-half {
-  width: 238px;
+  width: 236px;
 }
 
 .location-options {
